// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproTabs > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="amelipro-tabs"
  id="modified-unique-id-container"
>
  <div
    class="amelipro-tabs--desktop"
    id="modified-unique-id-desktop"
  >
    <div class="
      amelipro-tabs__btn-group
      modified-btn-group-classes
    ">
      <div
        aria-label="Modified aria label"
        aria-labelledby="modified-aria-labelledby"
        class="
          align-center
          align-sm-end
          amelipro-tabs__btn-group__wrapper
          d-flex
          flex-column
          flex-sm-row
          flex-wrap
          justify-center
          justify-sm-start
        "
        id="modified-unique-id"
        role="tablist"
      >
        <amelipro-tab-btn-stub
          class=""
          controls="modified-unique-id-tab-panel-0"
          disabled="false"
          pills="true"
          selected="false"
          tabindex="-1"
          uniqueid="modified-unique-id-tab-btn-0"
        ></amelipro-tab-btn-stub>
        <amelipro-tab-btn-stub
          class=""
          controls="modified-unique-id-tab-panel-1"
          disabled="false"
          pills="true"
          selected="true"
          tabindex="0"
          uniqueid="modified-unique-id-tab-btn-1"
        ></amelipro-tab-btn-stub>
        <amelipro-tab-btn-stub
          class=""
          controls="modified-unique-id-tab-panel-2"
          disabled="false"
          notification="1"
          pills="true"
          selected="false"
          tabindex="-1"
          uniqueid="modified-unique-id-tab-btn-2"
        ></amelipro-tab-btn-stub>
      </div>
    </div>
    <div
      class="
        amelipro-tabs__tab
        tabpanel
      "
      id="modified-unique-id-tab-panel-0"
      role="tabpanel"
      style="display: none;"
      tabindex="-1"
    ></div>
    <div
      class="
        amelipro-tabs__tab
        tabpanel
      "
      id="modified-unique-id-tab-panel-1"
      role="tabpanel"
      tabindex="0"
    ></div>
    <div
      class="
        amelipro-tabs__tab
        tabpanel
      "
      id="modified-unique-id-tab-panel-2"
      role="tabpanel"
      style="display: none;"
      tabindex="-1"
    ></div>
  </div>
</div>
`;

exports[`AmeliproTabs > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="amelipro-tabs"
  id="required-unique-id-container"
>
  <div
    class="amelipro-tabs--desktop"
    id="required-unique-id-desktop"
  >
    <div class="amelipro-tabs__btn-group">
      <div
        class="
          align-center
          align-sm-end
          amelipro-tabs__btn-group__wrapper
          d-flex
          flex-column
          flex-sm-row
          flex-wrap
          justify-center
          justify-sm-start
        "
        id="required-unique-id"
        role="tablist"
      ></div>
    </div>
  </div>
</div>
`;

exports[`AmeliproTabs > render correctly 1`] = `
<div
  class="amelipro-tabs"
  id="my-tabs-group-id-container"
>
  <div
    class="amelipro-tabs--desktop"
    id="my-tabs-group-id-desktop"
  >
    <div class="amelipro-tabs__btn-group">
      <div
        class="
          align-center
          align-sm-end
          amelipro-tabs__btn-group__wrapper
          d-flex
          flex-column
          flex-sm-row
          flex-wrap
          justify-center
          justify-sm-start
        "
        id="my-tabs-group-id"
        role="tablist"
      >
        <button
          aria-controls="my-tabs-group-id-tab-panel-0"
          aria-selected="true"
          class="
            amelipro-tab__btn
            first-tab-btn
            px-4
            py-2
            selected
            text-uppercase
          "
          id="my-tabs-group-id-tab-btn-0"
          role="tab"
          style="background-color: #00749C; border: 1px solid #00749C; color: #FFFFFF;"
          tabindex="0"
          type="button"
        >
          <span
            class="
              align-center
              amelipro-tab__btn__content
              d-flex
            "
            id="my-tabs-group-id-tab-btn-0-notification-content"
          >
            Mon onglet 1
            <!-- v-if -->
          </span>
        </button>
        <button
          aria-controls="my-tabs-group-id-tab-panel-1"
          aria-selected="false"
          class="
            amelipro-tab__btn
            px-4
            py-2
            text-uppercase
          "
          id="my-tabs-group-id-tab-btn-1"
          role="tab"
          style="background-color: #E6F6FC; border: 1px solid #DDDEDE; color: #00749C;"
          tabindex="-1"
          type="button"
        >
          <span
            class="
              align-center
              amelipro-tab__btn__content
              d-flex
            "
            id="my-tabs-group-id-tab-btn-1-notification-content"
          >
            Mon onglet 2
            <!-- v-if -->
          </span>
        </button>
        <button
          aria-controls="my-tabs-group-id-tab-panel-2"
          aria-selected="false"
          class="
            amelipro-tab__btn
            disabled
            px-4
            py-2
            text-uppercase
          "
          disabled=""
          id="my-tabs-group-id-tab-btn-2"
          role="tab"
          style="background-color: #DDDEDE; border: 1px solid #DDDEDE; color: #1A1B1B; cursor: default;"
          tabindex="-1"
          type="button"
        >
          <span
            class="
              align-center
              amelipro-tab__btn__content
              d-flex
            "
            id="my-tabs-group-id-tab-btn-2-notification-content"
          >
            Mon onglet 3
            <!-- v-if -->
          </span>
        </button>
        <button
          aria-controls="my-tabs-group-id-tab-panel-3"
          aria-selected="false"
          class="
            amelipro-tab__btn
            last-tab-btn
            px-4
            py-2
            text-uppercase
          "
          id="my-tabs-group-id-tab-btn-3"
          role="tab"
          style="background-color: #E6F6FC; border: 1px solid #DDDEDE; color: #00749C;"
          tabindex="-1"
          type="button"
        >
          <span
            class="
              align-center
              amelipro-tab__btn__content
              d-flex
            "
            id="my-tabs-group-id-tab-btn-3-notification-content"
          >
            Mon onglet 4
            <!-- v-if -->
          </span>
        </button>
      </div>
    </div>
    <div
      class="
        amelipro-tabs__tab
        bg-ap-white
        border-top-left
        pa-6
        tab-panel-default
        tabpanel
      "
      id="my-tabs-group-id-tab-panel-0"
      role="tabpanel"
      tabindex="0"
    ></div>
    <div
      class="
        amelipro-tabs__tab
        bg-ap-white
        border-top-left
        pa-6
        tab-panel-default
        tabpanel
      "
      id="my-tabs-group-id-tab-panel-1"
      role="tabpanel"
      style="display: none;"
      tabindex="-1"
    ></div>
    <div
      class="
        amelipro-tabs__tab
        bg-ap-white
        border-top-left
        pa-6
        tab-panel-default
        tabpanel
      "
      id="my-tabs-group-id-tab-panel-2"
      role="tabpanel"
      style="display: none;"
      tabindex="-1"
    ></div>
    <div
      class="
        amelipro-tabs__tab
        bg-ap-white
        border-top-left
        pa-6
        tab-panel-default
        tabpanel
      "
      id="my-tabs-group-id-tab-panel-3"
      role="tabpanel"
      style="display: none;"
      tabindex="-1"
    ></div>
  </div>
</div>
`;
